--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username
-repo: upptime # Your GitHub repository name
+owner: firstplato # Your GitHub organization or username
+repo: up # Your GitHub repository name
 
 # Add your sites here
 sites:
