--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: firstplato # Your GitHub organization or username
+owner: FIRSTPLATO # Your GitHub organization or username
 repo: up # Your GitHub repository name
 
 # Add your sites here
